# victoria3-mod-industry-realism

./: README.md
.metadata/: metadata.json
common/ai_strategies/: 00_default_strategy.txt  01_admin_strategies.txt  ir_default_strategy.txt
common/building_groups/: ir_building_groups.txt  zir_building_groups.txt
common/buildings/: 01_ir_industry.txt  air_fixes.txt  air_railway.txt  ir_agro.txt  ir_heavy_industry.txt  ir_industry.txt  ir_misc_resource.txt  zir_agro.txt  zir_fixes.txt  zir_heavy_industry.txt  zir_industry.txt  zir_misc_resource.txt  zir_private_infrastructure.txt
common/company_types/: ir_companies.txt  ir_companies_local.txt  zir_companies.txt
common/decrees/: ir_decree.txt
common/journal_entries/: ir_prohibition_laws.txt  ir_technology_production.txt  zir_prohibition_laws.txt  zir_technology_production.txt
common/laws/: ir_economic_system.txt  (+1 more)
events/: 0ir_industrial_accidents.txt  _ir_belle_epoque_events.txt  _ir_decree_events.txt  _ir_industrial_accidents.txt  _ir_pm_events.txt  ir_belle_epoque_events.txt  ir_decree_events.txt  ir_events.txt  ir_industrial_accidents.txt  ir_pm_events.txt
localization/: ir_l_braz_por.yml  ir_l_english.yml  ir_l_french.yml  ir_l_german.yml  ir_l_japanese.yml  ir_l_korean.yml  ir_l_polish.yml  ir_l_russian.yml  ir_l_simp_chinese.yml  ir_l_spanish.yml  ir_l_turkish.yml  l_braz_por.yml  l_english.yml  l_french.yml  l_german.yml  l_japanese.yml  l_korean.yml  l_polish.yml  l_russian.yml  l_simp_chinese.yml  l_spanish.yml  l_turkish.yml
work_files/automate/: Cargo.toml
work_files/automate/src/: main.rs
(+198 files in other folders)
